<resources>
    <string-array name="overview_list_item">
        <item>Season</item>
        <item>Course</item>
        <item>Assignment</item>
        <item>Type</item>
        <item>Authors</item>
        <item>Activity Tracking Author</item>
        <item>Food Nutrition information tracker Author</item>
        <item>House Thermostat Author</item>
        <item>Automobile Author</item>
    </string-array>
    <string-array name="overview_list_content">
        <item>2017 Fall</item>
        <item>CST2335 Mobile Graphical Interface Prog</item>
        <item>Final Assignment</item>
        <item>Group Work</item>
        <item>Hao Liu, Zhan Shen, Bin Yang, Geyan Huang</item>
        <item>Geyan Huang</item>
        <item>Zhan Shen</item>
        <item>Hao Liu</item>
        <item>Bin Yang</item>
    </string-array>
    <string-array name="tracker_list_type">
        <item>Running</item>
        <item>Walking</item>
        <item>Biking</item>
        <item>Swimming</item>
        <item>Skating</item>
    </string-array>
    <string name="app_name">Universal Tools</string>
    <string name="main_navigation_drawer_open">Open navigation drawer</string>
    <string name="main_navigation_drawer_close">Close navigation drawer</string>
    <string name="main_menu_activity">Activity Tracking</string>
    <string name="main_menu_food">Food Nutrition information tracker</string>
    <string name="main_menu_house">House Thermostat</string>
    <string name="main_menu_automobile">Automobile</string>
    <string name="overview_title">Overview</string>
    <string name="tracker_action_help">Help</string>
    <string name="tracker_action_quit">Quit</string>
    <string name="tracker_insert">Insert</string>
    <string name="tracker_insert_title">New Event</string>
    <string name="tracker_insert_minute">Minutes</string>
    <string name="tracker_insert_date">Date</string>
    <string name="tracker_insert_time">Time</string>
    <string name="tracker_insert_type">Type</string>
    <string name="tracker_insert_comment">Comments</string>
    <string name="tracker_update_title">Update Event</string>
    <string name="tracker_update_delete">Delete</string>
    <string name="tracker_insert_empty">Please input the minutes you have exercised!</string>
    <string name="tracker_insert_done">Insert successful!</string>
    <string name="tracker_update_done">Update successful!</string>
    <string name="tracker_delete_done">Delete successful!</string>
    <string name="tracker_delete_dialog_message">Are you sure you want delete?</string>
    <string name="tracker_delete_dialog_ok">OK</string>
    <string name="tracker_delete_dialog_cancel">Cancel</string>
    <string name="tracker_type_run">Running</string>
    <string name="tracker_type_walk">Walking</string>
    <string name="tracker_type_bike">Biking</string>
    <string name="tracker_type_swim">Swimming</string>
    <string name="tracker_type_skate">Skating</string>
    <string name="tracker_nav_bot_list">Activity List</string>
    <string name="tracker_nav_bot_dashboard">Dashboard</string>
    <string name="tracker_dashboard_setDailyGoal">Set Daily Goal (Minute)</string>
    <string name="tracker_dashboard_dailyProgress">Today Progress</string>
    <string name="tracker_dashboard_todayProgress">Today Exercise (Minutes)</string>
    <string name="tracker_dashboard_dailyGoal">Daily Goal (Minute)</string>
    <string name="tracker_dashboard_thisMonthTime">This Month Total Exercise Time (Minute)</string>
    <string name="tracker_dashboard_lastMonthTime">Last Month Total Exercise Time (Minute)</string>
    <string name="tracker_help_title">Help</string>
    <string name="food_item_foodName">Food Name:</string>
    <string name="food_item_servings">Servings:</string>
    <string name="food_item_calories">Calories(g):</string>
    <string name="food_item_fat">Fat(g):</string>
    <string name="food_item_carbohydrate">Carbohydrate(g):</string>
    <string name="food_item_date">Date:</string>
    <string name="food_item_time">Time:</string>
    <string name="food_List_listViewTitleBar">Food Item List</string>
    <string name="food_List_shareButtonText">SHARE:</string>
    <string name="food_List_helpButtonText">HELP:</string>
    <string name="food_Add_addTitleBar">What Did You Eat?</string>
    <string name="food_Add_empty_warning">Please fill out all fields.</string>
    <string name="food_Add_serving_warning">Servings must be greater than zero.</string>
    <string name="food_Add_addButton">Add</string>
    <string name="food_Add_infoAddSuccessful">Information was added successfully.</string>
    <string name="food_Add_infoAddUnsuccessful">Failed to add information.</string>
    <string name="food_Update_updateTitleBar">Update Your Food Item</string>
    <string name="food_Update_updateButton">Update</string>
    <string name="food_Update_deleteButton">Delete</string>
    <string name="food_Dashboard_titleBar">Calories Summary</string>
    <string name="food_Dashboard_text1">YESTERDAY</string>
    <string name="food_Dashboard_text2">AVERAGE PER DAY</string>
    <string name="food_Dashboard_max">Calories Goal: &#160;3000</string>
    <string name="food_Dashboard_totalDays">Total days:</string>
    <string name="food_Dashboard_totalCalories">Total calories:</string>
    <string name="food_Dashboard_toolbar_one">Author</string>
    <string name="food_Dashboard_toolbar_two">Version</string>
    <string name="food_Dashboard_toolbar_three">Help</string>
    <string name="food_Dashboard_toolbar_one_message">Author: Zhan Shen, Version: v1.0.0</string>
    <string name="food_Dialog_title_facebook">Share on Facebook</string>
    <string name="food_Dialog_title_google">Share on Google+</string>
    <string name="food_Dialog_title_twitter">Share on Twitter</string>
    <string name="food_Dialog_title_help">HELP</string>
    <string name="food_Dialog_comment">Your comment</string>
    <string name="food_Dialog_share">Share</string>
    <string name="food_Dialog_cancel">Cancel</string>
    <string name="food_Dialog_exit">Exit</string>
    <string name="food_Dialog_deleteMessage">Are you sure you want to delete?</string>
    <string name="food_Dialog_delete">Delete</string>
    <string name="food_Dialog_help_author">Author:</string>
    <string name="food_Dialog_help_author_name">Zhan Shen</string>
    <string name="food_Dialog_help_version">Version:</string>
    <string name="food_Dialog_help_version_number">v1.0.0</string>
    <string name="food_Dialog_help_guide">User guide:</string>
    <string name="food_Dialog_help_guide_add">Add a new record</string>
    <string name="food_Dialog_help_guide_statistic">Check calories summary</string>
    <string name="food_Dialog_help_guide_arrow">Edit or delete selected record</string>
    <string name="food_Dialog_help_guide_social">Share to social media</string>
    <string name="food_Snackbar_facebookMessage">Shared on Facebook successfully.</string>
    <string name="food_Snackbar_googleMessage">Shared on Google+ successfully.</string>
    <string name="food_Snackbar_twitterMessage">Shared on Twitter successfully.</string>
    <string name="SUNDAY">SUNDAY</string>
    <string name="MONDAY">MONDAY</string>
    <string name="TUESDAY">TUESDAY</string>
    <string name="WEDNESDAY">WEDNESDAY</string>
    <string name="THURSDAY">THURSDAY</string>
    <string name="FRIDAY">FRIDAY</string>
    <string name="SATURDAY">SATURDAY</string>
    <string-array name="stringArray_dayOfWeek_h">
        <item>@string/SUNDAY</item>
        <item>@string/MONDAY</item>
        <item>@string/TUESDAY</item>
        <item>@string/WEDNESDAY</item>
        <item>@string/THURSDAY</item>
        <item>@string/FRIDAY</item>
        <item>@string/SATURDAY</item>

    </string-array>
    <string name="OK_h">OK</string>
    <string name="CANCEL_h">CANCEL</string>
    <string name="timeExist_overwriteQuestion_h">The temperature rule exists, replace the rule?</string>
    <string name="timeExist_deleteQuestion_h">Delete the temperature rule?</string>
    <string name="title_addNew_h">Add new temperature rule</string>
    <string name="title_delete_h">Delete temperature rule</string>
    <string name="setDayofWeekString_h">Set Day of Week</string>
    <string name="setTempString_h">set temperature</string>
    <string name="setHourString_h">Set hour</string>
    <string name="setMinString_h">Set minute</string>
    <string name="saveString_h">Save</string>
    <string name="deleteString_h">Delete this temperature rule</string>
    <string name="cancelString_h">Cancel</string>
    <string name="saveAsNewRuleString_h">Save as new rule</string>
    <string name="tempRule_selected_String_h">You selected temperature rule: </string>
    <string name="AboutInfor_h">About</string>
    <string name="Instruction_h">Instruction</string>
    <string name="helpText_stringHTML_About_h">
            <![CDATA[
                <p><strong>Author:</strong> Hao LIU(Michael), student number 040892975</p>
                <p><strong>House Thermostat version number:</strong> v1.0</p>
                <p><strong>Brief Instructions:</strong></p>
<p>1. Users are able to set a schedule for a thermostat.</p>
<p>2. The user is able to set rules for the temperature based on which day and time to set the temperature.</p>
<p>3. The schedule is displayed in a ListView. Clicking on an item from the list should show the details of the temperature rule, and let the user edit the rule and save it.</p>
<p>4. The user is allowed to edit the rule, and &ldquo;save as new rule&rdquo; instead of changing the selected rule.&nbsp;</p>
<p>5. The user is also allowed to edit the current rule and save it on the current schedule list.</p>
            ]]>

    </string>
    <string name="helpText_stringHTML_Instruction_h">
            <![CDATA[
<p><strong>Detailed Instructions:</strong></p>
<p>There are 2 main GUI part for the House Thermostat activity, the vertical view, and horizontal view.</p>
<p><strong>The vertical view:</strong></p>
<p>There are 3 main GUI windows.</p>
<p>The main activity window which displays a schedule for a thermostat.</p>
<p>Users can press the ADD float button to on the main window to activate the add activity window.</p>
<p>After at least one schedule is added to the list, users can press any listed schedule to activate the edit/delete window.</p>
<p>The add activity window which will take new settings from the user.</p>
<p>The edit/delete activity window which will modify, delete or add new rules to the current schedule.</p>
<p><strong>The horizontal view:</strong></p>
<p>There is only one main GUI window. The left half of the main activity window displays a schedule for a thermostat. And 2 fragments interface will share the right side of the main activity window.</p>
<p>When users press the add button, the add new schedule fragment interface will show on the right side. The user can operate on this interface to add a new schedule.</p>
<p>The edit/delete activity window will replace the right side of the main activity window when users press any of the listed schedules. The user can operate on this selected schedule, such as modify, delete or save as a new rule.</p>
            ]]>


    </string>
    <string name="reminder">Please enter the following data： </string>
    <string name="liters_a">LITERS(L): </string>
    <string name="price_a">UNIT PRICE($): </string>
    <string name="km_a">KILOMETERS(KM): </string>
    <string name="recordTime_a">Time Recorded： </string>
    <string name="edit_a">EDIT</string>
    <string name="save_a">SAVE NEW PURCHASE</string>
    <string name="delete_a">DELETE</string>
    <string name="update_a">UPDATE</string>
    <string name="average_a">Calculate average price of last month</string>
    <string name="total_a">Total amount purchased last month</string>
    <string name="everymonth_a">Total amount purchased every month</string>
    <string name="add_a">Add new purchase</string>
</resources>