<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:orientation="horizontal"
        android:background="#e44620">

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="5dp"
            android:src="@drawable/ic_food_help_information"/>
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="3dp"
            android:text="@string/food_Dialog_title_help"
            android:textColor="@color/white"
            android:textSize="18sp" />



    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/food_Dialog_help_author" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="15dp"
                android:layout_marginTop="10dp"
                android:text="@string/food_Dialog_help_author_name" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="6dp"
                android:text="@string/food_Dialog_help_version" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="15dp"
                android:layout_marginTop="6dp"
                android:text="@string/food_Dialog_help_version_number" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="6dp"
                android:text="@string/food_Dialog_help_guide" />

            <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_marginTop="5dp"
                android:src="@drawable/ic_food_help_green_plus_circle"
                android:text="@string/food_Dialog_help_guide" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:gravity="center_vertical"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="6dp"
                android:text="@string/food_Dialog_help_guide_add" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginLeft="106dp"
                android:layout_marginTop="6dp"
                android:src="@drawable/ic_food_help_green_statistic"
                android:text="@string/food_Dialog_help_guide" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:gravity="center_vertical"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="6dp"
                android:text="@string/food_Dialog_help_guide_statistic" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginLeft="106dp"
                android:layout_marginTop="6dp"
                android:src="@drawable/ic_food_help_gray_arrow_right"
                android:text="@string/food_Dialog_help_guide" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:gravity="center_vertical"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="6dp"
                android:text="@string/food_Dialog_help_guide_arrow" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginLeft="106dp"
                android:layout_marginTop="6dp"
                android:src="@drawable/ic_food_help_facebook"
                android:text="@string/food_Dialog_help_guide" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:gravity="center_vertical"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="6dp"
                android:text="@string/food_Dialog_help_guide_social" />

        </LinearLayout>

    </LinearLayout>



</LinearLayout>