<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".PkgAutomobile.AutomobileActivity">

    <!--<android.support.design.widget.AppBarLayout-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content">-->

        <!--<android.support.v7.widget.Toolbar-->
            <!--android:id="@+id/toolbar"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:background="@color/colorAccent"-->
            <!--android:theme="@style/ThemeOverlay.AppCompat.ActionBar"-->
            <!--app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>-->

    <!--</android.support.design.widget.AppBarLayout>-->

    <ListView
        android:layout_width="match_parent"
        android:layout_height="340dp"
        android:id="@+id/purchaseList"></ListView>

    <Button
        android:id="@+id/addNew"
        android:layout_width="250dp"
        android:layout_height="38dp"
        android:layout_gravity="center"
        android:background="@drawable/auto_border"
        android:text="@string/add_a" />

    <Button
        android:id="@+id/everyMonthPurchased"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/everymonth_a"
        android:layout_marginTop="15dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp">
        <Button
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:id="@+id/lastMonthAveragePrice"
            android:text="@string/average_a" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="$"
            android:textAlignment="center"
            android:textSize="20dp"
            android:id="@+id/lastMonthAveragePriceResult"
            android:textColor="@color/colorAccent"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp">
        <Button
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:id="@+id/lastMonthPurchased"
            android:text="@string/total_a"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="$"
            android:textAlignment="center"
            android:textSize="20dp"
            android:id="@+id/lastMonthPurchasedResult"
            android:textColor="@color/colorAccent"/>
    </LinearLayout>




</LinearLayout>
