<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/phone_frameLayout"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="cst2335.groupproject.PkgFood.FoodList">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/appBackground">

    <!--Top: Title bar with cross button-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/titleBar"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="16dp"
            android:layout_weight="1"
            android:text="@string/food_Update_updateTitleBar"
            android:textColor="@color/whiteText"
            android:textSize="24sp" />

        <ImageView
            android:id="@+id/cross"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="bottom"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="16dp"
            android:src="@drawable/ic_food_white_cross" />
    </LinearLayout>

    <!--Medium: Text area-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="360dp"
        android:layout_margin="10dp"
        android:orientation="horizontal">

        <!--Left column list-->
        <LinearLayout
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:gravity="bottom"
                android:layout_marginLeft="10dp"
                android:text="@string/food_item_foodName"
                android:textSize="18dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:gravity="bottom"
                android:layout_marginLeft="10dp"
                android:text="@string/food_item_servings"
                android:textSize="18dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:gravity="bottom"
                android:layout_marginLeft="10dp"
                android:text="@string/food_item_calories"
                android:textSize="18dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:gravity="bottom"
                android:layout_marginLeft="10dp"
                android:text="@string/food_item_fat"
                android:textSize="18dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:gravity="bottom"
                android:layout_marginLeft="10dp"
                android:text="@string/food_item_carbohydrate"
                android:textSize="18dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:gravity="bottom"
                android:layout_marginLeft="10dp"
                android:text="@string/food_item_date"
                android:textSize="18dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:gravity="bottom"
                android:layout_marginLeft="10dp"
                android:text="@string/food_item_time"
                android:textSize="18dp" />

        </LinearLayout>

        <!--Right column list for user to update food info -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/addFoodName"
                    android:layout_width="match_parent"
                    android:layout_height="53dp"
                    android:width="200px"
                    android:textSize="25sp"
                    android:gravity="bottom|right" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/addServings"
                    android:layout_width="match_parent"
                    android:layout_height="53dp"
                    android:inputType="numberDecimal"
                    android:maxLength="6"
                    android:textSize="25sp"
                    android:gravity="bottom|right"
                    android:width="200px" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/addCalories"
                    android:layout_width="match_parent"
                    android:layout_height="53dp"
                    android:textSize="25sp"
                    android:gravity="bottom|right"
                    android:inputType="number" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/addFat"
                    android:layout_width="match_parent"
                    android:layout_height="53dp"
                    android:inputType="number"
                    android:textSize="25sp"
                    android:gravity="bottom|right" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/addCarbo"
                    android:layout_width="match_parent"
                    android:layout_height="53dp"
                    android:inputType="number"
                    android:textSize="25sp"
                    android:gravity="bottom|right" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/addDate"
                    android:layout_width="match_parent"
                    android:layout_height="53dp"
                    android:focusable="false"
                    android:textSize="25sp"
                    android:gravity="bottom|right" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/addTime"
                    android:layout_width="match_parent"
                    android:layout_height="53dp"
                    android:inputType="time"
                    android:focusable="false"
                    android:textSize="25sp"
                    android:gravity="bottom|right" />
            </LinearLayout>

        </LinearLayout> <!--End of "Right column list"-->
    </LinearLayout> <!--End of "Medium: Text area"-->

    <View
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <!--Bottom: Delete and Update buttons-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal">

        <!--Bottom: Delete button-->
        <Button
            android:id="@+id/deleteButton"
            android:layout_width="145dp"
            android:layout_height="45dp"
            android:layout_marginLeft="12dp"
            android:background="@color/deleteButtonColor"
            android:text="@string/food_Update_deleteButton"
            android:textColor="@color/whiteText"
            android:textSize="22sp" />

        <!--Bottom: Update button-->
        <Button
            android:id="@+id/updateButton"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="12dp"
            android:background="@color/addButtonColor"
            android:text="@string/food_Update_updateButton"
            android:textColor="@color/whiteText"
            android:textSize="22sp" />
    </LinearLayout> <!--End of "Bottom: Delete button-->"-->
    </LinearLayout>

</FrameLayout>
